# backend-hackaton

./: .pdm-python  db.sqlite3  popular_categorias.py  pyproject.toml  requirements.txt
.github/workflows/: pipeline.yaml
config/: settings.py  urls.py
joinville/: admin.py  apps.py  models.py  serializers.py  views.py
joinville/migrations/: 0001_initial.py  0002_usuario_avatar_usuario_data_nascimento_and_more.py
